tests/specs/interface_extends2.txt
# mod.ts
export interface Interface extends Iterator, Iterable {}

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:1:1
  | 
1 | export interface Interface extends Iterator, Iterable {}
  | ^


# output.txt
Defined in file:///mod.ts:1:1

interface Interface extends Iterator, Iterable



# output.json
[
  {
    "kind": "interface",
    "name": "Interface",
    "location": {
      "filename": "file:///mod.ts",
      "line": 1,
      "col": 0,
      "byteIndex": 0
    },
    "declarationKind": "export",
    "interfaceDef": {
      "extends": [
        {
          "repr": "Iterator",
          "kind": "typeRef",
          "typeRef": {
            "typeParams": null,
            "typeName": "Iterator"
          }
        },
        {
          "repr": "Iterable",
          "kind": "typeRef",
          "typeRef": {
            "typeParams": null,
            "typeName": "Iterable"
          }
        }
      ],
      "methods": [],
      "properties": [],
      "callSignatures": [],
      "indexSignatures": [],
      "typeParams": []
    }
  }
]
